# iced_sash

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: google.csv
examples/: sashing.rs  sashing_w_outer.rs  table.rs
src/: lib.rs
